# TestDataFlow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  notification-synthetic-probe.yml  support-synthetic-probe.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
cassandra/jmx/: jmxremote.password
docs/: README.md  huong-dan-flink-paimon.md  kien-truc-tong-quan.md  thanh-phan.md  van-hanh.md
docs/design/: ecommerce-microservices.md  pipelines.md
docs/monitoring/: README.md  case-kafka-lag.md  chien-luoc-observability.md  incident-runbook.md
docs/runbooks/: fulfillment-delay.md  reconciliation-delay.md  replication-lag.md  schema-drift.md  ttl-oversell.md
docs/usecases/: README.md  customer-support-360.md  data-governance-cheatsheet.md  finance-reconciliation.md  fraud-detection-pipeline.md  giai-phap-thong-nhat-du-lieu.md  inventory-360-pipeline.md  marketing-personalization.md  tinh-huong-ecommerce-phuc-tap.md
monitoring/alertmanager/: alertmanager.yml  alertmanager.yml.tmpl  entrypoint.sh
monitoring/blackbox/: blackbox.yml
monitoring/cassandra-exporter/: node2.yml  node3.yml  seed.yml
monitoring/connect-exporter/: config.yml
monitoring/loki/: config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yaml
monitoring/spark/: metrics.properties
monitoring/trino-exporter/: config.yml
services/: Dockerfile
(+146 files in other folders)
